--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^16.5.2",
+    "@react-native-firebase/auth": "^16.5.2",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "expo": "~47.0.12",
+    "expo-dev-client": "~2.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5"
